RESOLVED FIXED302623
MockMediaPlayerPrivateMediaSource can't be instantiated in the web content process.
https://bugs.webkit.org/show_bug.cgi?id=302623
Summary MockMediaPlayerPrivateMediaSource can't be instantiated in the web content pr...
Jean-Yves Avenard [:jya]
Reported 2025-11-16 22:48:07 PST
When the MockMediaPlayerPrivateMediaSource was migrated to the GPU process, it stopped being usable in the web process.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-16 22:48:13 PST
Jean-Yves Avenard [:jya]
Comment 2 2025-11-16 22:51:18 PST
EWS
Comment 3 2025-11-17 18:38:08 PST
Committed 303155@main (fa376883a601): <https://commits.webkit.org/303155@main> Reviewed commits have been landed. Closing PR #54033 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.