MockMediaPlayerPrivateMediaSource can't be instantiated in the web content process. https://bugs.webkit.org/show_bug.cgi?id=302623 rdar://164861134

Reviewed by Eric Carlson.

We make the MockMediaPlayerPrivateMediaSource runs in the content process
when the MediaSourceUseRemoteAudioVideoRenderer preference is set.

* Source/WebKit/WebProcess/GPU/media/WebMediaStrategy.cpp:
(WebKit::WebMediaStrategy::enableMockMediaSource):

Canonical link: https://commits.webkit.org/303155@main